--- a/examples/advanced/optimizing-perfomance/index.html
+++ b/examples/advanced/optimizing-perfomance/index.html
@@ -24,7 +24,7 @@
 <section class="nav-bar">
     <div class="nav-container">
         <div class="brand">
-            <a href="index.html"><img src="../../../images/react-logo.png">Содержание</a>
+            <a href="index.html"><img src="../../../images/react-logo.png">Теория</a>
         </div>
         <nav>
             <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
@@ -36,7 +36,7 @@
                     <a href="../../../labs.html">Лабораторные работы</a>
                 </li>
                 <li>
-                    <a href="../../../examples.html">Содержание</a>
+                    <a href="../../../theory.html">Теория</a>
                 </li>
                 <li>
                     <a href="../../../info.html">Справочник</a>
