--- a/examples/quick-start/composition-vs-inheritance/index.html
+++ b/examples/quick-start/composition-vs-inheritance/index.html
@@ -29,7 +29,7 @@
         <section class="nav-bar">
             <div class="nav-container">
                 <div class="brand">
-                    <a href="index.html"><img src="../../../images/react-logo.png">Содержание</a>
+                    <a href="index.html"><img src="../../../images/react-logo.png">Теория</a>
                 </div>
                 <nav>
                     <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
@@ -41,7 +41,7 @@
                             <a href="../../../labs.html">Лабораторные работы</a>
                         </li>
                         <li>
-                            <a href="../../../examples.html">Содержание</a>
+                            <a href="../../../theory.html">Теория</a>
                         </li>
                         <li>
                             <a href="../../../info.html">Справочник</a>
