--- a/examples/quick-start/hello-world/index.html
+++ b/examples/quick-start/hello-world/index.html
@@ -27,7 +27,7 @@
         <section class="nav-bar">
             <div class="nav-container">
                 <div class="brand">
-                    <a href="index.html"><img src="../../../images/react-logo.png">Содержание</a>
+                    <a href="index.html"><img src="../../../images/react-logo.png">Теория</a>
                 </div>
                 <nav>
                     <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
@@ -39,7 +39,7 @@
                             <a href="../../../labs.html">Лабораторные работы</a>
                         </li>
                         <li>
-                            <a href="../../../examples.html">Содержание</a>
+                            <a href="../../../theory.html">Теория</a>
                         </li>
                         <li>
                             <a href="../../../info.html">Справочник</a>
@@ -55,10 +55,10 @@
     <p class="section">Вступление</p>
 
     <p>Для работы с React вы можете использовать <a href="https://codepen.io/pen?&editors=0010">CodePen</a> - платформу
-        для редактирования и хранения кода на HTML, CSS и JavaScript с просмотром готового результата в браузере. Если
+        для редактирования и хранения кода на HTML, css и JavaScript с просмотром готового результата в браузере. Если
         же вы
         предпочитаете работать с локальной средой разработки, то посетите раздел
-        <a href="../../../examples.html">Установка React</a>.</p>
+        <a href="../../../theory.html">Установка React</a>.</p>
 
     <p>Рассмотрим небольшой кусочек кода:</p>
     <pre><code class="language-js">
