--- a/labs/lab17/index.html
+++ b/labs/lab17/index.html
@@ -38,7 +38,7 @@
                         <a href="../../labs.html">Лабораторные работы</a>
                     </li>
                     <li>
-                        <a href="../../examples.html">Содержание</a>
+                        <a href="../../theory.html">Теория</a>
                     </li>
                     <li>
                         <a href="../../info.html">Справочник</a>
