--- a/index.html
+++ b/index.html
@@ -51,25 +51,25 @@
             <h1>РАЗДЕЛ 1. ВВЕДЕНИЕ В REACT.JS</h1>
             <hr noshade>
             <a href="labs/lab01/index.html">
-                <p>Лабараторная работа №1</p>
+                <p>Лабораторные работа №1</p>
             </a>
             <a href="labs/lab02/index.html">
-                <p>Лабараторная работа №2</p>
+                <p>Лабораторные работа №2</p>
             </a>
             <a href="labs/lab03/index.html">
-                <p>Лабараторная работа №3</p>
+                <p>Лабораторные работа №3</p>
             </a>
             <a href="labs/lab04/index.html">
-                <p>Лабараторная работа №4</p>
+                <p>Лабораторные работа №4</p>
             </a>
             <a href="labs/lab05/index.html">
-                <p>Лабараторная работа №5</p>
+                <p>Лабораторные работа №5</p>
             </a>
             <a href="labs/lab06/index.html">
-                <p>Лабараторная работа №6</p>
+                <p>Лабораторные работа №6</p>
             </a>
             <a href="labs/lab07/index.html">
-                <p>Лабараторная работа №7</p>
+                <p>Лабораторные работа №7</p>
             </a>
             <p class="back" onclick="react_1()">Главное меню</p>
         </div>
@@ -77,25 +77,25 @@
             <h1>РАЗДЕЛ 2. ОСНОВЫ REACT.JS</h1>
             <hr noshade>
             <a href="labs/lab08/index.html">
-                <p>Лабараторная работа №8</p>
+                <p>Лабораторные работа №8</p>
             </a>
             <a href="labs/lab09/index.html">
-                <p>Лабараторная работа №9</p>
+                <p>Лабораторные работа №9</p>
             </a>
             <a href="labs/lab10/index.html">
-                <p>Лабараторная работа №10</p>
+                <p>Лабораторные работа №10</p>
             </a>
             <a href="labs/lab11/index.html">
-                <p>Лабараторная работа №11</p>
+                <p>Лабораторные работа №11</p>
             </a>
             <a href="labs/lab12/index.html">
-                <p>Лабараторная работа №12</p>
+                <p>Лабораторные работа №12</p>
             </a>
             <a href="labs/lab13/index.html">
-                <p>Лабараторная работа №13</p>
+                <p>Лабораторные работа №13</p>
             </a>
             <a href="labs/lab14/index.html">
-                <p>Лабараторная работа №14</p>
+                <p>Лабораторные работа №14</p>
             </a>
             <p class="back" onclick="react_2()">Главное меню</p>
         </div>
@@ -103,22 +103,22 @@
             <h1>РАЗДЕЛ 3. REDUX.JS</h1>
             <hr noshade>
             <a href="labs/lab15/index.html">
-                <p>Лабараторная работа №15</p>
+                <p>Лабораторные работа №15</p>
             </a>
             <a href="labs/lab16/index.html">
-                <p>Лабараторная работа №16</p>
+                <p>Лабораторные работа №16</p>
             </a>
             <a href="labs/lab17/index.html">
-                <p>Лабараторная работа №17</p>
+                <p>Лабораторные работа №17</p>
             </a>
             <a href="labs/lab18/index.html">
-                <p>Лабараторная работа №18</p>
+                <p>Лабораторные работа №18</p>
             </a>
             <a href="labs/lab19/index.html">
-                <p>Лабараторная работа №19</p>
+                <p>Лабораторные работа №19</p>
             </a>
             <a href="labs/lab20/index.html">
-                <p>Лабараторная работа №20</p>
+                <p>Лабораторные работа №20</p>
             </a>
             <p class="back" onclick="react_3()">Главное меню</p>
         </div>
