Материалы  для "Справочник" + Новые стили + Единый стиль списков
1. Добавлены новые материалы в справочник.
2. Новые стили для списков  внутри материалов.
3. Единый стиль для списков: Лабораторные работы, Содержание, Теория.

--- a/info.html
+++ b/info.html
@@ -41,7 +41,16 @@
     <div id="delimiter"></div>
 
     <div class="content">
-        <p class="section">Какая-то информация</p>
+        <p>В данном разделе вы найдете вспомогательную информацию для написания лабораторных работ. Для вашего удобства весь материал разделен на категории.</p>
+        <div class="lr-block">
+           <p class="section-title">Начало работы с React.js, Node.js</p>
+            <ol class="lr-list">
+            <li><a href="info/cmd_install/index.html">Установка Командной строки</a></li>
+            <li><a href="info/node_js_install/index.html">Установка Node.js</a></li>
+            <li><a href="info/create_react_app/index.html">Создание React приложения (NPX, NPM, YARN)</a></li>
+            </ol>
+        </div>
+        
     </div>
 
 </body>
