--- a/theory.html
+++ b/theory.html
@@ -43,78 +43,78 @@
 
         <div class="content">
             <p class="section">Установка React</p>
-            <ul>
-                <li><a href="examples/installation/try-react/index.html"><span>• </span>Начало работы с React</a></li>
-                <li><a href="examples/installation/new-app/index.html"><span>• </span>Внедряем React в новое приложение</a></li>
-                <li><a href="examples/installation/add-to-app/index.html"><span>• </span>Внедряем React в уже существующее приложение</a></li>
-                <li><a href="examples/installation/cdn-links/index.html"><span>• </span>CDN ссылки</a></li>
+            <ul class="lr-list">
+                <li><a href="examples/installation/try-react/index.html">Начало работы с React</a></li>
+                <li><a href="examples/installation/new-app/index.html">Внедряем React в новое приложение</a></li>
+                <li><a href="examples/installation/add-to-app/index.html">Внедряем React в уже существующее приложение</a></li>
+                <li><a href="examples/installation/cdn-links/index.html">CDN ссылки</a></li>
             </ul>
             <p class="section">Основы</p>
-            <ul>
-                <li><a href="examples/quick-start/hello-world/index.html"><span>• </span>Hello, world!</a></li>
-                <li><a href="examples/quick-start/introducing-jsx/index.html"><span>• </span>Введение в JSX</a></li>
-                <li><a href="examples/quick-start/rendering-elements/index.html"><span>• </span>Создание элементов</a></li>
-                <li><a href="examples/quick-start/components-and-props/index.html"><span>• </span>Компоненты и их свойства</a></li>
-                <li><a href="examples/quick-start/state-and-lifecycle/index.html"><span>• </span>Состояние и жизненный цикл</a></li>
-                <li><a href="examples/quick-start/handling-events/index.html"><span>• </span>Обработка событий</a></li>
-                <li><a href="examples/quick-start/conditional-rendering/index.html"><span>• </span>Выборочный рендеринг</a></li>
-                <li><a href="examples/quick-start/lists-and-keys/index.html"><span>• </span>Списки и ключи</a></li>
-                <li><a href="examples/quick-start/forms/index.html"><span>• </span>Формы</a></li>
-                <li><a href="examples/quick-start/lifting-state-up/index.html"><span>• </span>Передача состояния наверх</a></li>
-                <li><a href="examples/quick-start/composition-vs-inheritance/index.html"><span>• </span>Композиция вместо наследования</a></li>
-                <li><a href="examples/quick-start/thinking-in-react/index.html"><span>• </span>Мышление в React</a></li>
+            <ul class="lr-list">
+                <li><a href="examples/quick-start/hello-world/index.html">Hello, world!</a></li>
+                <li><a href="examples/quick-start/introducing-jsx/index.html">Введение в JSX</a></li>
+                <li><a href="examples/quick-start/rendering-elements/index.html">Создание элементов</a></li>
+                <li><a href="examples/quick-start/components-and-props/index.html">Компоненты и их свойства</a></li>
+                <li><a href="examples/quick-start/state-and-lifecycle/index.html">Состояние и жизненный цикл</a></li>
+                <li><a href="examples/quick-start/handling-events/index.html">Обработка событий</a></li>
+                <li><a href="examples/quick-start/conditional-rendering/index.html">Выборочный рендеринг</a></li>
+                <li><a href="examples/quick-start/lists-and-keys/index.html">Списки и ключи</a></li>
+                <li><a href="examples/quick-start/forms/index.html">Формы</a></li>
+                <li><a href="examples/quick-start/lifting-state-up/index.html">Передача состояния наверх</a></li>
+                <li><a href="examples/quick-start/composition-vs-inheritance/index.html">Композиция вместо наследования</a></li>
+                <li><a href="examples/quick-start/thinking-in-react/index.html">Мышление в React</a></li>
             </ul>
 
             <p class="section">Продвинутый React.js</p>
-            <ul>
-                <li><a href="examples/advanced/jsx-in-depth/index.html"><span>• </span>JSX подробнее</a></li>
-                <li><a href="examples/advanced/typechecking-with-proptypes/index.html"><span>• </span>Проверка типов с помощью PropTypes</a></li>
-                <li><a href="examples/advanced/static-typechecking/index.html"><span>• </span>Статическая проверка типов</a></li>
-                <li><a href="examples/advanced/refs-and-dom/index.html"><span>• </span>Ссылки Ref и DOM</a></li>
-                <li><a href="examples/advanced/uncontrolled-components/index.html"><span>• </span>Неконтролируемые компоненты</a></li>
-                <li><a href="examples/advanced/optimizing-perfomance/index.html"><span>• </span>Оптимизация производительности</a></li>
-                <li><a href="examples/advanced/react-without-jsx/index.html"><span>• </span>React без JSX</a></li>
-                <li><a href="examples/advanced/reconciliation/index.html"><span>• </span>Согласование</a></li>
-                <li><a href="examples/advanced/context/index.html"><span>• </span>Контекст</a></li>
-                <li><a href="examples/advanced/fragments/index.html"><span>• </span>Фрагменты</a></li>
-                <li><a href="examples/advanced/portals/index.html"><span>• </span>Порталы</a></li>
-                <li><a href="examples/advanced/error-boundaries/index.html"><span>• </span>Границы ошибок</a></li>
-                <li><a href="examples/advanced/web-components/index.html"><span>• </span>Web-компоненты</a></li>
-                <li><a href="examples/advanced/higher-order-comp/index.html"><span>• </span>Компоненты высшего уровня</a></li>
-                <li><a href="examples/advanced/forwarding-refs/index.html"><span>• </span>Пересылки</a></li>
-                <li><a href="examples/advanced/render-props/index.html"><span>• </span>Props'ы рендера</a></li>
-                <li><a href="examples/advanced/integrating-with-lib/index.html"><span>• </span>Интеграция с другими библиотеками</a></li>
-                <li><a href="examples/advanced/strict-mode/index.html"><span>• </span>Строгий режим</a></li>
+            <ul class="lr-list">
+                <li><a href="examples/advanced/jsx-in-depth/index.html">JSX подробнее</a></li>
+                <li><a href="examples/advanced/typechecking-with-proptypes/index.html">Проверка типов с помощью PropTypes</a></li>
+                <li><a href="examples/advanced/static-typechecking/index.html">Статическая проверка типов</a></li>
+                <li><a href="examples/advanced/refs-and-dom/index.html">Ссылки Ref и DOM</a></li>
+                <li><a href="examples/advanced/uncontrolled-components/index.html">Неконтролируемые компоненты</a></li>
+                <li><a href="examples/advanced/optimizing-perfomance/index.html">Оптимизация производительности</a></li>
+                <li><a href="examples/advanced/react-without-jsx/index.html">React без JSX</a></li>
+                <li><a href="examples/advanced/reconciliation/index.html">Согласование</a></li>
+                <li><a href="examples/advanced/context/index.html">Контекст</a></li>
+                <li><a href="examples/advanced/fragments/index.html">Фрагменты</a></li>
+                <li><a href="examples/advanced/portals/index.html">Порталы</a></li>
+                <li><a href="examples/advanced/error-boundaries/index.html">Границы ошибок</a></li>
+                <li><a href="examples/advanced/web-components/index.html">Web-компоненты</a></li>
+                <li><a href="examples/advanced/higher-order-comp/index.html">Компоненты высшего уровня</a></li>
+                <li><a href="examples/advanced/forwarding-refs/index.html">Пересылки</a></li>
+                <li><a href="examples/advanced/render-props/index.html">Props'ы рендера</a></li>
+                <li><a href="examples/advanced/integrating-with-lib/index.html">Интеграция с другими библиотеками</a></li>
+                <li><a href="examples/advanced/strict-mode/index.html">Строгий режим</a></li>
             </ul>
 
             <p class="section">Справочник</p>
-            <ul>
-                <li><a href="examples/reference/react-api/index.html"><span>• </span>React</a></li>
-                <li><a href="examples/reference/react-component/index.html"><span>• </span>React.Component</a></li>
-                <li><a href="examples/reference/react-dom/index.html"><span>• </span>ReactDOM</a></li>
-                <li><a href="examples/reference/react-dom-server/index.html"><span>• </span>ReactDOMServer</a></li>
-                <li><a href="examples/reference/dom-elements/index.html"><span>• </span>Элементы DOM</a></li>
-                <li><a href="examples/reference/synthetic-event/index.html"><span>• </span>SyntheticEvent</a></li>
-                <li><a href="#"><span>• </span>Утилиты тестирования</a></li>
-                <li><a href="#"><span>• </span>Поверхностный рендеринг</a></li>
-                <li><a href="#"><span>• </span>Тестовый отрисовщик</a></li>
-                <li><a href="#"><span>• </span>Требования к среде JavaScript</a></li>
-                <li><a href="#"><span>• </span>Словарь</a></li>
+            <ul class="lr-list">
+                <li><a href="examples/reference/react-api/index.html">React</a></li>
+                <li><a href="examples/reference/react-component/index.html">React.Component</a></li>
+                <li><a href="examples/reference/react-dom/index.html">ReactDOM</a></li>
+                <li><a href="examples/reference/react-dom-server/index.html">ReactDOMServer</a></li>
+                <li><a href="examples/reference/dom-elements/index.html">Элементы DOM</a></li>
+                <li><a href="examples/reference/synthetic-event/index.html">SyntheticEvent</a></li>
+                <li><a href="#">Утилиты тестирования</a></li>
+                <li><a href="#">Поверхностный рендеринг</a></li>
+                <li><a href="#">Тестовый отрисовщик</a></li>
+                <li><a href="#">Требования к среде JavaScript</a></li>
+                <li><a href="#">Словарь</a></li>
             </ul>
 
             <p class="section">Redux.js</p>
-            <ul>
-                <li><a href="examples/redux/about-redux/index.html"><span>• </span>О Redux</a></li>
-                <li><a href="examples/redux/install/index.html"><span>• </span>Установка</a></li>
-                <li><a href="examples/redux/introduction/index.html"><span>• </span>Введение</a></li>
-                <li><a href="examples/redux/actions/index.html"><span>• </span>Действия</a></li>
-                <li><a href="examples/redux/reducers/index.html"><span>• </span>Редюсеры</a></li>
-                <li><a href="examples/redux/store/index.html"><span>• </span>Хранилище</a></li>
-                <li><a href="examples/redux/data-flow/index.html"><span>• </span>Поток данных</a></li>
-                <li><a href="examples/redux/usage-with-react/index.html"><span>• </span>Использование с React</a></li>
-                <li><a href="examples/redux/async-actions/index.html"><span>• </span>Асинхронные действия</a></li>
-                <li><a href="examples/redux/async-flow/index.html"><span>• </span>Асинхронный поток</a></li>
-                <li><a href="examples/redux/middleware/index.html"><span>• </span>Связующее ПО</a></li>
+            <ul class="lr-list">
+                <li><a href="examples/redux/about-redux/index.html">О Redux</a></li>
+                <li><a href="examples/redux/install/index.html">Установка</a></li>
+                <li><a href="examples/redux/introduction/index.html">Введение</a></li>
+                <li><a href="examples/redux/actions/index.html">Действия</a></li>
+                <li><a href="examples/redux/reducers/index.html">Редюсеры</a></li>
+                <li><a href="examples/redux/store/index.html">Хранилище</a></li>
+                <li><a href="examples/redux/data-flow/index.html">Поток данных</a></li>
+                <li><a href="examples/redux/usage-with-react/index.html">Использование с React</a></li>
+                <li><a href="examples/redux/async-actions/index.html">Асинхронные действия</a></li>
+                <li><a href="examples/redux/async-flow/index.html">Асинхронный поток</a></li>
+                <li><a href="examples/redux/middleware/index.html">Связующее ПО</a></li>
             </ul>
         </div>
 
