--- a/info/create_react_app/index.html
+++ b/info/create_react_app/index.html
@@ -59,8 +59,8 @@
         <img class="lazy-loaded" style="max-width: 100%;" src="https://camo.githubusercontent.com/e4f2feecb8bc0d58c1f2e31f97b2856a04b50ef3/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f66616365626f6f6b2f6372656174652d72656163742d61707040323762343261633765666130313866323534313135336162333064363331383066356661333965302f73637265656e636173742e737667" data-lazy-type="image" data-src="https://camo.githubusercontent.com/e4f2feecb8bc0d58c1f2e31f97b2856a04b50ef3/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f66616365626f6f6b2f6372656174652d72656163742d61707040323762343261633765666130313866323534313135336162333064363331383066356661333965302f73637265656e636173742e737667" alt="npm запуск" width="600" data-canonical-src="https://cdn.jsdelivr.net/gh/facebook/create-react-app@27b42ac7efa018f2541153ab30d63180f5fa39e0/screencast.svg">
         <p>Вам не нужно устанавливать или настраивать такие инструменты, как веб-пакет или Babel. Они предварительно настроены и скрыты, так что вы можете сосредоточиться только на коде.</p>
         <p class="section-title">Создание приложения</p>
-        <p>Вам понадобится Node 8.16.0 или Node 10.16.0 или более поздняя версия на локальном компьютере. Вы можете использовать nvm(macOS / Linux) или nvm-windows для переключения версий Node между различными проектами.</p>
-        <p><a target="_blank" href="../node_js_install/index.html"><b>Инструкция как установить Node.js на ваше стройство</b></a></p>
+        <p>Вам понадобится Node 8.16.0 или Node 10.16.0 или более поздняя версия на локальном компьютере. Вы можете использовать nvm (macOS / Linux) или nvm-windows для переключения версий Node между различными проектами.</p>
+        <p><a target="_blank" href="../node_js_install/index.html"><b>Как установить Node.js на ваше стройство</b></a></p>
         <p>Чтобы создать новое приложение, вы можете выбрать один из следующих методов:</p>
         <p class="section-title-left">NPX</p>
         <pre class="line-numbers">
@@ -69,7 +69,7 @@
         <p class="section-title-left">npm</p>
         <pre class="line-numbers">
         <code class="language-html">npm init react-app my-app</code></pre>
-        <p>npm init initializer доступно в нпм 6+</p>
+        <p>npm init initializer доступно в npm 6+</p>
         <p class="section-title-left">Yarn</p>
         <pre class="line-numbers">
         <code class="language-html">yarn create react-app my-app</code></pre>
@@ -97,7 +97,7 @@
             <li>Быстрый интерактивный тестовый модуль со встроенной поддержкой отчетов о покрытии.</li>
             <li>Живой сервер разработки, который предупреждает об общих ошибках.</li>
             <li>Сценарий сборки для объединения JS, CSS и изображений для производства с хешами и исходными картами.</li>
-            <li>Работник сервиса, работающий в автономном режиме, и манифест веб-приложения, удовлетворяющий всем критериям Progressive Web App(Примечание: использование работника сервиса является обязательным по адресу response-scripts@2.0.0 и выше)</li>
+            <li>Работник сервиса, работающий в автономном режиме, и манифест веб-приложения, удовлетворяющий всем критериям Progressive Web App (Примечание: использование работника сервиса является обязательным по адресу response-scripts@2.0.0 и выше)</li>
             <li>Беспроблемные обновления для вышеперечисленных инструментов с одной зависимостью.</li>
         </ul>
         <div class="note note-warning">Эти инструменты предварительно настроены для работы определенным образом. Если ваш проект требует дополнительной настройки, вы можете «извлечь» и настроить его, но тогда вам нужно будет поддерживать эту конфигурацию.</div>
