--- a/info/node_js_install/index.html
+++ b/info/node_js_install/index.html
@@ -54,7 +54,7 @@
         <pre class="line-numbers">
         <code class="language-html">node -v
         nmp -v</code></pre>
-        <p>Результат выполнение команд:</p>
+        <p>Результат выполнения команд:</p>
         <img src="node_js2.svg" alt="Результат выполнения консоли">
         <p>Если результат выполнения команд в консоли схож с данным, то вы всё сделали правильно, Node.js установлен и функционирует правильно.</p>
         <div class="block-info-btn">
