--- a/info/cmd_install/index.html
+++ b/info/cmd_install/index.html
@@ -45,7 +45,7 @@
 
     <div class="content">
         <p class="section">Установка Командной строки</p>
-        <p>В операционной системе Microsoft Windows есть предустановленный терминал, который называется cmd.exe. Использовать его в качестве основного терминала не рекомендуется, так как он слабее аналогов. Для стандартного терминала Windows существует 2 альтернативы в виде эмуляторов консоли под названием cmder и Windows Terminal. </p>
+        <p>В операционной системе Microsoft Windows есть предустановленный терминал, который называется cmd.exe. Использовать его в качестве основного терминала не рекомендуется, так как его возможности не так широки, как у аналогов. Для стандартного терминала Windows существует две альтернативы в виде эмуляторов консоли под названием cmder и Windows Terminal.</p>
         <p class="section-title">О эмуляторах</p>
         <p><b>Windows Terminal</b> — приложение Терминал от Microsoft. Предлагает вкладочный интерфейс и объединяет инструменты Командная строка (CMD), PowerShell, Azure Cloud Shell и Подсистема Windows для Linux (WSL)</p>
         <img src="win_terminal.png" alt="Windows Terminal">
@@ -65,7 +65,7 @@
         <img src="win_terminal1.png" alt="Windows Terminal Search">
         <p>После запуска Microsoft Store, в нем нужно найти приложение Windows Terminal (Preview). Для этого можно воспользоваться поиском по магазину приложений. Введите в поисковую строку слово «terminal» и нажмите на верхнее приложение.</p>
         <img src="win_terminal2.png" alt="Windows Terminal Store">
-        <p>Если с поиском возникают трудности, то можете воспользоваться <a target="_blank" href="https://www.microsoft.com/ru-ru/p/windows-terminal-preview/9n0dx20hk701">веб-версию магазина Microsoft</a>. Здесь нужно будет нажать на кнопку «Получить» и подтвердить переход в приложение.</p>
+        <p>Если с поиском возникают трудности, то можете воспользоваться <a target="_blank" href="https://www.microsoft.com/ru-ru/p/windows-terminal-preview/9n0dx20hk701">веб-версией магазина Microsoft</a>. Здесь нужно будет нажать на кнопку «Получить» и подтвердить переход в приложение.</p>
         <img src="win_terminal3.png" alt="Windows Terminal Web-Store">
         <p>Так или иначе, вы попадете в Microsoft Store на страницу приложения Windows Terminal (Preview). Здесь нужно нажать на кнопку «Install» и дождаться завершения установки приложения.</p>
         <img src="win_terminal4.png" alt="Windows Terminal Web-Store Download">
